Technologie_Objet/tps/.svn/pristine/9d/9d39aba8402edb1a5c36091218e30416bdbfaa26.svn-base
ComplementsCercleTest.java:8: error: '{' expected
static class ComplementsCercleTest() {
                                  ^
1 error
